API change: Moved envelope ticket-add to POST method (from PUT)
